<resources>
    <string name="app_name">Trivia</string>
    <string name="no_difficulty_selected">No difficulty selected.</string>
    <string name="no_category_selected">No category selected.</string>
    <string name="select_category">Select a category:</string>
    <string name="select_difficulty">Select difficulty:</string>
    <string name="start_button_text">Start Game</string>
    <string name="submit_answer">Submit Answer</string>
    <string name="score_title">Game Score:</string>
    <string name="restart_game">Play Again</string>
    <string name="welcome_text">Trivia Game</string>
    <string name="back_to_main">Back to Main Page</string>
    <string name="start_game_btn">Start game</string>
    <string name="trivia_game">Trivia Game</string>
    <string name="game_setup">Game Setup</string>
</resources>
